# isamples_modelserver

./: Dockerfile  README.md  docker-compose.yml  enums.py  isamples_modelserver.env  isamples_modelserver_container_startup.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
integration_tests/: test_modelserver_integration_test.py
isamples_metadata/taxonomy/: ClassifierInput.py  Model.py  OpenContextClassifierInput.py  SESARClassifierInput.py  config.py  isamplesfasttext.py  metadata_models.py
tests/: test_isamples_modelserver.py  test_metadata_models.py
