[tool.poetry]
name = "isamples-modelserver"
version = "0.1.0"
description = "iSamples Model Server is a REST endpoint for invoking iSamples ML models"
authors = ["Danny Mandel <danny.mandel@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "isamples_metadata"},
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
pydantic = "^2.1"
uvicorn = "^0.23.1"
fasttext-wheel = "^0.9.2"
transformers = "^4.31.0"
pydantic-settings = "^2.0.2"
torch = [
    { platform = "darwin", version = "^2.0.1" }
]
torchaudio = [
    { platform = "darwin", version = "^2.0.2" }
]
torchvision = [
    { platform = "darwin", version = "^0.15.2" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
